syntax = "proto3";
package serverPackage;

service Processing {
  rpc InputName (NamePayload) returns (Response) {}
  rpc InputEmail (EmailPayload) returns (Response) {}
}

message NamePayload{
    string name = 1;
}

message EmailPayload{
    string email = 1;
}

message Response {
    int32 status = 1;
    string message = 2;
    int64 timestamp = 3;
    string data = 4;
    string error = 5;
}
